--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,6 +8,10 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.11'
+    - name: Install system packages
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y nginx
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
